--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -1,7 +1,7 @@
 # database init, supports mysql too
 database=mysql
-spring.datasource.url=${MYSQL_URL:jdbc:mysql://localhost/petclinic}
-spring.datasource.username=${MYSQL_USER:petclinic}
-spring.datasource.password=${MYSQL_PASS:petclinic}
+spring.datasource.url=jdbc:mysql://petclinic.cfh5e1hvf0wo.us-east-2.rds.amazonaws.com:3306/petclinic
+spring.datasource.username=petclinic
+spring.datasource.password=petclinic 
 # SQL is written to be idempotent so this is safe
 spring.datasource.initialization-mode=always
