--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -3,5 +3,6 @@ database=mysql
 spring.datasource.url=jdbc:mysql://petclinic.cfh5e1hvf0wo.us-east-2.rds.amazonaws.com:3306/petclinic
 spring.datasource.username=petclinic
 spring.datasource.password=petclinic 
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 # SQL is written to be idempotent so this is safe
 spring.datasource.initialization-mode=always
