--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -1,6 +1,7 @@
 # database init, supports mysql too
 database=mysql
-spring.datasource.url=jdbc:mysql://petclinic.cfh5e1hvf0wo.us-east-2.rds.amazonaws.com:3306/petclinic
+# spring.datasource.url=jdbc:mysql://petclinic.cfh5e1hvf0wo.us-east-2.rds.amazonaws.com:3306/
+spring.datasource.url=${MYSQL_URL:jdbc:mysql://petclinic.cfh5e1hvf0wo.us-east-2.rds.amazonaws.com:3306/petclinic}
 spring.datasource.username=petclinic
 spring.datasource.password=petclinic 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
