--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # database init, supports mysql too
-database=h2
-spring.datasource.schema=classpath*:db/${database}/schema.sql
-spring.datasource.data=classpath*:db/${database}/data.sql
+database=mysql-connector-java
+spring.datasource.schema=classpath*:db/petclinic/schema.sql
+spring.datasource.data=classpath*:db/petclinic/data.sql
 
 # Web
 spring.thymeleaf.mode=HTML
